<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_lighter"
    android:paddingBottom="40dp"
    tools:context=".ui.fragment.signs.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/profile_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/profile_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/menu_profile_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_iv" />

    <LinearLayout
        android:id="@+id/profile_name_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title_tv">

        <TextView
            android:id="@+id/profile_title_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:text="@string/register_title_user_name"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/profile_show_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:padding="4dp"
            android:textColor="@color/white_second"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_email_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_linear">

        <TextView
            android:id="@+id/profile_title_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:text="@string/register_title_email"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/profile_show_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:padding="4dp"
            android:textColor="@color/white_second"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_pass_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_email_linear">

        <TextView
            android:id="@+id/profile_title_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:text="@string/register_title_Pass"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/profile_show_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_horizontal"
            android:padding="4dp"
            android:textColor="@color/white_second"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/profile_comment_button_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_shape"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/detail_see_comments"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_error_not_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/profile_not_register"
        android:textColor="@color/white_second"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_comment_button_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_error_go_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:text="@string/profile_go_registered"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_error_not_register_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>